--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,29 +38,87 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    function get1500sInventors(arr){
+      return arr.filter((item) => item.year >= 1500 && item.year < 1600);
+    }
+    //console.log(get1500sInventors(inventors));
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    function getInventorFullname(arr){
+      return arr.map((item) => `${item.first} ${item.last}`)
+    }
+    //console.log(getInventorFullname(inventors));
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    function sortByBirthDate(arr){
+      arr.sort((item1, item2) => item1.year - item2.year);
+    }
+    // sortByBirthDate(inventors);
+    // console.log(inventors);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    function allYearsLive(arr){
+      return arr.reduce((sum, current) =>sum + (current.passed - current.year), 0);
+    }
+    //console.log(allYearsLive(inventors));
 
     // 5. Sort the inventors by years lived
+    function sortByAge(arr){
+      arr.sort((item1, item2) => {
+        let age1 = item1.passed - item1.year;
+        let age2 = item2.passed - item2.year;
+        return (age1 - age2);
+      }) // youngest to oldest
+    }
+    // sortByAge(inventors);
+    // console.log(inventors);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    // const boulevardList = document.querySelectorAll(".mw-category-group > ul > li > a");
+    // let arr = Array.from(boulevardList);
+    // function getResult(arr){
+    //   return boulevardList.map(item => item.textContent).filter((item) => item.includes("de"));
+    // }
+    // console.log(getResult(arr));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
+    function sortByLastName(arr){
+      arr.sort((item1, item2) =>{
+        let name1 = item1.split(",");
+        let name2 = item2.split(",");
+        let lastName1 = name1[1];
+        let lastName2 = name2[1];
+        if (lastName1 < lastName2){
+          return -1;
+        }
+        else if (lastName1 > lastName2){
+          return 1;
+        }
+        else return 0;
+      })
+    }
+    // sortByLastName(people);
+    // console.log(people);
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
-
+    function countInstances(arr){
+      return arr.reduce((obj, item)=>{
+        if (item in obj){
+          obj[item]++;
+        }
+        else{
+          obj[item] = 1;
+        }
+        return obj;
+      }, {})
+    }
+    console.log(countInstances(data));
   </script>
 </body>
 </html>
