--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,15 +27,33 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    function check(arr){
+      return arr.some((item) => item.year <= (2025-19));
+    }
+    console.log(check(people));
     // Array.prototype.every() // is everyone 19 or older?
-
+    function checkEvery(arr){
+      return arr.every((item) => item.year < (2025-19));
+    }
+    console.log(checkEvery(people));
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
-
+    function findComment(arr){
+      return arr.find((item) => item.id === 823423);
+    }
+    console.log(findComment(comments));
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    function findCommentIndex(arr){
+      let index = arr.findIndex((item) => item.id === 823423);
+      arr.splice(index, 1);
+    }
+    console.log(comments);
+    findCommentIndex(comments);
+    console.log(comments);
+    
 
   </script>
 </body>
